# ollmatuning

./: .gitignore  LICENSE  README.md  REMCODER.md  pyproject.toml
.claude/: settings.json
ollmatuning/: __init__.py  benchmark.py  benchmark.py.bak  cli.py  huggingface.py  mlx_benchmark.py  mlx_models.py  recommend.py  system.py  ui.py  utils.py
ollmatuning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_benchmark.py  test_cli.py  test_huggingface.py  test_mlx_models.py  test_recommend.py  test_system.py  test_utils.py
