[project]
name = "ollmatuning"
version = "0.1.0"
description = "Detect GPU/system, find the best Ollama coding+tool model, benchmark, and set it."
requires-python = ">=3.10"
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.18"]
dev = ["pytest>=7.0", "pytest-mock>=3.10"]

[project.scripts]
ollmatuning = "ollmatuning.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ollmatuning*"]
